--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "gatsby": "^5.9.0",
+    "gatsby-plugin-material-ui": "^4.0.2",
     "gatsby-plugin-netlify-cms": "^7.9.0",
     "gatsby-plugin-sass": "^6.9.0",
     "netlify-cms-app": "^2.15.72",
